[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ipyniivue"
license = { text = "BSD-2-Clause" }
dynamic = ["version"]
description = "A Jupyter Widget for Niivue based on anywidget."
dependencies = ["anywidget", "requests"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/niivue/ipyniivue"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "ruff", "pytest", "sphinx", "furo"]

[pytest]
nb_test_files = true

[tool.hatch.envs.default]
features = ["dev"]
uv = true

# https://github.com/ofek/hatch-vcs
[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyniivue/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.hatch.envs.default.scripts]
lint = ["ruff check . {args:.}", "ruff format . --check --diff {args:.}"]
format = ["ruff format . {args:.}", "ruff check . --fix {args:.}"]
test = ["pytest {args:.}"]
docs = "cd docs && make clean && make html"

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
	"E",    # style errors
	"W",    # style warnings
	"F",    # flakes
	"D",    # pydocstyle
	"D417", # Missing argument descriptions in Docstrings
	"I",    # isort
	"UP",   # pyupgrade
	"C4",   # flake8-comprehensions
	"B",    # flake8-bugbear
	"A001", # flake8-builtins
	"RUF",  # ruff-specific rules
	"TCH",  # flake8-type-checking
	"TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
"scripts/*.py" = ["D", "S"]
